Added github repository link to project's source code

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p data-testid="myTrack">Frontend</p>
 
             <!-- GitHub URL to Project's source code-->
-            <p><a href="#" data-testid="githubURL">GitHub link to this Project's source code</a></p>
+            <p><a target="_blank" href="https://github.com/Floren-teena/frontend-track-stage-one-task" data-testid="githubURL">GitHub link to this Project's source code</a></p>
         </div>
         
     </div>
