Added slight changes/updates

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Florentina's Slack Profile</title>
-    <style>
-        
-    </style>
+    <title>Slack Profile</title>
 </head>
 <body>
     <div class="container">
@@ -63,6 +60,6 @@
         currentDayOfTheWeekElement.textContent = getCurrentDayOfTheWeek();
         currentUTCTimeElement.textContent = getCurrentUTCTime();
     </script>
-    
+
 </body>
 </html>
