Corrected slack display name

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="info">
             
             <!-- My Slack User Name -->
-            <h1 data-testid="slackUserName">FLORENTINA ANTIGHA</h1>
+            <h1 data-testid="slackUserName">Florentina Antigha</h1>
 
             <!-- Current Day of the Week -->
             <p data-testid="currentDayOfTheWeek"></p>
